# rust-r-cube

2x2/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  coverage.txt
2x2/.github/workflows/: ci.yml
2x2/cubes/: cube_diff2.txt  cube_ex001.txt  cube_god.txt  cube_normal.txt  cube_normalwy.txt
2x2/examples/: check_color_preservation.rs  check_corner_correct.rs  check_detailed_r.rs  check_orientation.rs  check_r_orientation.rs  check_rp_orientation.rs  check_solved_states.rs  test_sequence.rs
2x2/src/: cube.rs  error.rs  history.rs  lib.rs  main.rs  solver.rs  statistics.rs
2x2/src/cube/: enums.rs  io.rs  mod.rs  rotation.rs  tests_coverage.rs  validation.rs
2x2/src/gui/: app.rs  controls.rs  mod.rs  renderer.rs  renderer_3d.rs  statistics_panel.rs
2x2/tests/: complete_workflow_test.rs  coverage_edge_cases.rs  coverage_final.rs  coverage_plus.rs  cube_tests.rs  end_to_end_tests.rs  file_format_tests.rs  god_number_test.rs  regression_tests.rs  ru_cycle_test.rs  solver_tests.rs  test_all_moves.rs  test_orientation_exhaustive.rs  test_orientation_generator.rs  test_orientation_verification.rs  test_r_only.rs  test_r_orientation.rs  test_solver_100_coverage.rs  test_solver_coverage.rs  test_solver_coverage_targeted.rs  user_state_test.rs
