[package]
name = "rubiks-cube-2x2"
version = "0.1.0"
edition = "2021"
authors = ["katoy <youichikato@gmail.com>"]
description = "高速双方向BFSソルバー搭載の2x2ルービックキューブGUIアプリ"
repository = "https://github.com/katoy/rust-r-cube"
license = "MIT"
keywords = ["rubiks-cube", "solver", "gui", "game"]
categories = ["games", "visualization"]

[dependencies]
egui = "0.29"
eframe = { version = "0.29", default-features = true }
rand = "0.8"
glam = "0.30.9"
rustc-hash = "2.1"

[profile.release]
opt-level = 3
lto = true
